# nugget_ai

./: .gitignore  ARCHITECHTURE.md  ASSUMPTIONS.md  Makefile  README.md  SCOPE.md  main.py  pyproject.toml
chatbot/: chatbot_ui.py  generator.py  prompt.py  retriever.py  tools.py
config/: rag_config.py
data/processed_json/: Burger King.json  McDonald's.json  The Big Grill.json  Vint Club.json
data/raw_json/: Burger King.json  The Big Grill.json  The Vibes - Late Night Club.json  Vint Club.json  sample.json
kb/: build_index.py  preprocess.py
models/: resturant.py
preprocessing/: json_preprocesser.py
scrapers/: base_scraper.py  scrape.py
scrapers/sources/: zomato_scraper.py
scripts/: legal_sites_to_scrape_robots.py
utils/: exchange_rates.py  logger.py
